--- a/subconvert.ini
+++ b/subconvert.ini
@@ -1,4 +1,4 @@
-ruleset=Proxies,https://raw.githubusercontent.com/godlikeanyone/Rules/master/Correction.list
+ruleset=Proxies,https://raw.iqiq.io/godlikeanyone/Rules/master/Correction.list
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=Proxies,[]MATCH
 
