--- a/subconvert.ini
+++ b/subconvert.ini
@@ -1,4 +1,5 @@
-ruleset=Proxies,https://raw.githubusercontent.com/godlikeanyone/Rules/master/Correction.list
+ruleset=DIRECT,https://raw.githubusercontent.com/godlikeanyone/Rules/master/onedrive.list
+ruleset=Proxies,https://raw.githubusercontent.com/godlikeanyone/Rules/master/HideIP.list
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=Proxies,[]MATCH
 
