--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,4 +1,6 @@
-hostname = biz.caiyunapp.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, www.wolframalpha.com,api.revenuecat.com
+hostname = alt.getutm.app,biz.caiyunapp.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, www.wolframalpha.com,api.revenuecat.com
+
+^https://alt.getutm.app url 302 https://qxnav.com/altstore.json
 
 #qq空间广告屏蔽
 ^http:\/\/c\.gdt\.qq\.com\/gdt_clickwap\.fcg\?viewid url reject
