--- a/subconvert.ini
+++ b/subconvert.ini
@@ -1,3 +1,97 @@
+emojis=(?i:Bandwidth|expire|流量|时间|应急|过期),🏳️‍🌈
+emojis=(NetEaseMusic|网易云音乐|网易云解锁),🎶
+emojis=(阿尔巴尼亚|Albania),🇦🇱
+emojis=(阿塞拜疆|Azerbaijan),🇦🇿
+emojis=(埃及|Egypt),🇪🇬
+emojis=(爱沙尼亚|Estonia),🇪🇪
+emojis=(巴拿马|Panama),🇵🇦
+emojis=(保加利亚|Bulgaria),🇧🇬
+emojis=(北马其顿|Macedonia),🇲🇰
+emojis=(波黑共和国|波士尼亚与赫塞哥维纳|Bosnia|Herzegovina),🇧🇦
+emojis=(格鲁吉亚|Georgia),🇬🇪
+emojis=(哈萨克斯坦|Kazakhstan),🇰🇿
+emojis=(吉尔吉斯斯坦|Kyrgyzstan),🇰🇬
+emojis=(柬埔寨|Cambodia),🇰🇭
+emojis=(克罗地亚|Croatia),🇭🇷
+emojis=(肯尼亚|Kenya),🇰🇪
+emojis=(拉脱维亚|Latvia),🇱🇻
+emojis=(立陶宛|Lietuvos),🇱🇹
+emojis=(卢森堡|Luxemburg|Luxembourg),🇱🇺
+emojis=(蒙古|Монголулс|Mongolia),🇲🇳
+emojis=(秘鲁|Peru),🇵🇪
+emojis=(墨西哥|Mexico),🇲🇽
+emojis=(尼日利亚|Nigeria),🇳🇬
+emojis=(葡萄牙|Portugal),🇵🇹
+emojis=(塞尔维亚|Serbia),🇷🇸
+emojis=(塞浦路斯|Cyprus),🇨🇾
+emojis=(斯洛伐克|Slovensko),🇸🇰
+emojis=(斯洛文尼亚|Slovenia),🇸🇮
+emojis=(突尼斯|Tunisia),🇹🇳
+emojis=(乌拉圭|Uruguay),🇺🇾
+emojis=(希腊|Greece),🇬🇷
+emojis=(新西兰|纽西兰|New Zealand),🇳🇿
+emojis=(伊朗|Iran),🇮🇷
+emojis=(约旦|Jordan),🇯🇴
+emojis=(智利|Chile),🇨🇱
+emojis=(Ascension|阿森松),🇦🇨
+emojis=(Austria|Vienna|奥地利|维也纳),🇦🇹
+emojis=(Bengal|Bangladesh|孟加拉),🇧🇩
+emojis=(Colombia|哥伦比亚),🇨🇴
+emojis=(Costa Rica|哥斯达黎加),🇨🇷
+emojis=(Czech|捷克),🇨🇿
+emojis=(Ecuador|厄瓜多尔),🇪🇨
+emojis=(Europe|欧洲),🇪🇺
+emojis=(Finland|Helsinki|芬兰|赫尔辛基),🇫🇮
+emojis=(Hungary|匈牙利),🇭🇺
+emojis=(IMAN|马恩岛|Mann),🇮🇲
+emojis=(Indonesia|Jakarta|印尼|印度尼西亚|雅加达),🇮🇩
+emojis=(Ireland|Dublin|爱尔兰|都柏林),🇮🇪
+emojis=(Israel|以色列),🇮🇱
+emojis=(Italy|Milan|意大利|米兰),🇮🇹
+emojis=(Moldova|摩尔多瓦),🇲🇩
+emojis=(Morocco|摩洛哥),🇲🇦
+emojis=(Nepal|尼泊尔),🇳🇵
+emojis=(Norway|挪威),🇳🇴
+emojis=(Pakistan|巴基斯坦),🇵🇰
+emojis=(Puerto.*?Rico|波多黎各),🇵🇷
+emojis=(Switzerland|Zurich|瑞士|苏黎世),🇨🇭
+emojis=(Venezuela|委内瑞拉),🇻🇪
+emojis=(\bAR\b|阿根廷|Argentina),🇦🇷
+emojis=(\bBE\b|Belgium|比利时),🇧🇪
+emojis=(\bBR\b|Brazil|Paulo|巴西|圣保罗),🇧🇷
+emojis=(\bMY\b|Malaysia|马来西亚),🇲🇾
+emojis=(\bPH\b|Philippines|菲律宾|马尼拉),🇵🇭
+emojis=(\bRO\b|Romania|罗马尼亚),🇷🇴
+emojis=(\bSA\b|Arabia|沙特),🇸🇦
+emojis=(\bSE\b|Sweden|瑞典),🇸🇪
+emojis=(\bTH[A]\b|Thailand|泰国|泰國|曼谷),🇹🇭
+emojis=(\bT[U]R\b|Turkey|土耳其|土.*(?!▷|回|转)|伊斯坦布尔),🇹🇷
+emojis=(\bUA\b|Ukraine|乌克兰),🇺🇦
+emojis=(\bVN\b|Vietnam|越南),🇻🇳
+emojis=(\bZA\b|Africa|南非),🇿🇦
+emojis=(?i:\bAU[S]?\b|Australia|Sydney|澳大利亚|澳洲|悉尼),🇦🇺
+emojis=(?i:\bD[N]?K\b|Denmark|丹麦),🇩🇰
+emojis=(?i:\bDE[U]?\b|Germany|法兰克福|德(国|意志)|中德|^德$|德.*(?!▷|回|转)),🇩🇪
+emojis=(?i:\bES[P]?\b|Spain|西班牙),🇪🇸
+emojis=(?i:\bFR[A]?\b|France|Paris|法国|巴黎|法国.*(?!▷|回|转)),🇫🇷
+emojis=(?i:\bIN[D]?\b|India|Mumbai|印度|孟买|加尔各答|贾坎德|泰米尔纳德),🇮🇳
+emojis=(?i:\bIS[L]?\b|Iceland|冰岛),🇮🇸
+emojis=(?i:\bKP\b|North.*?Korea|朝鲜),🇰🇵
+emojis=(?i:\bNL[D]?\b|Netherlands|荷兰|阿姆斯特丹),🇳🇱
+emojis=(?i:\bP[O]?L\b|Poland|波兰),🇵🇱
+emojis=(?i:\bUAE\b|Dubai|阿联酋|迪拜),🇦🇪
+emojis=(?i:\bCA[N]?\b|Canada|Toronto|Montreal|Vancouver|加拿大|蒙特利尔|温哥华|楓葉|枫叶|加(?!州|坡|拉).*(?!▷|回|转)),🇨🇦
+emojis=(?i:\bJP[N]?\b|Japan|Tokyo|Osaka|Saitama|日本|东京|大阪|埼玉|[^-]日|日.*(?!▷|回|转)|沪日|穗日|川日|中日|泉日|杭日),🇯🇵
+emojis=(?i:\bK[O]?R\b|Korea|首尔|韩|韓),🇰🇷
+emojis=(?i:\bRU[S]?\b|Russia|Moscow|Petersburg|Siberia|伯力|莫斯科|圣彼得堡|西伯利亚|新西伯利亚|哈巴罗夫斯克|俄罗斯|[^-]俄|俄.*(?!▷|回|转)|京俄|杭俄),🇷🇺
+emojis=(?i:\bSG[P]?\b|Singapore|新加坡|狮城|[^-]新|新(?!▷|西)|沪新|京新|泉新|穗新|深新|杭新),🇸🇬
+emojis=(?i:\bUK\b|\bGB[R]?\b|England|United.*?Kingdom|London|英国|[^-]英|伦敦|英.*(?!▷|回|转)),🇬🇧
+emojis=(?i:\bUS[A]?\b|America|United.*?States|美国|[^-]美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|美.*(?!▷|回|转)|沪美|京美),🇺🇸
+emojis=(?i:\bHK[G]?\b|Hong.*?Kong|\bHKT\b|\bHKBN\b|\bHGC\b|\bWTT\b|\bCMI\b|[^-]港|港(?!▷|回|转)),🇭🇰
+emojis=(?i:\bMO\b|Macao|澳门|\bCTM\b|澳(?!大利亚).*(?!▷|回|转)),🇲🇴
+emojis=(?i:\bTW[N]?\b|Taiwan|新北|彰化|\bCHT\b|台湾|[^-]台|\bHINET\b|台.*(?!▷|回|转)|台北|台中),🇹🇼
+emojis=(?i:\bC[H]?N\b|China|back|回国|中国[^-]|江苏[^-]|北京[^-]|上海[^-]|广州[^-]|深圳[^-]|杭州[^-]|常州[^-]|徐州[^-]|青岛[^-]|宁波[^-]|镇江[^-]|成都[^-]|河北[^-]|山西[^-]|辽宁[^-]|吉林[^-]|黑龙江[^-]|江苏[^-]|浙江[^-]|安徽[^-]|福建[^-]|江西[^-]|山东[^-]|河南[^-]|湖北[^-]|湖南[^-]|广东[^-]|海南[^-]|四川[^-]|贵州[^-]|云南[^-]|陕西[^-]|甘肃[^-]|青海[^-]|内蒙古[^-]|广西[^-]|西藏[^-]|宁夏[^-]|新疆[^-]|中.*(?!▷|回|转)|苏.*(?!▷|回|转)|京.*(?!▷|回|转)|沪.*(?!▷|回|转)|穗.*(?!▷|回|转)|深(?!▷|港)|杭.*(?!▷|回|转)|徐.*(?!▷|回|转)|青.*(?!▷|回|转)|甬.*(?!▷|回|转)|镇.*(?!▷|回|转)|禅.*(?!▷|回|转)|蓉.*(?!▷|回|转)),🇨🇳
+
 ruleset=DIRECT,https://raw.githubusercontent.com/godlikeanyone/Rules/master/Direct.list
 ruleset=Proxies,https://raw.githubusercontent.com/godlikeanyone/Rules/master/HideIP.list
 ruleset=DIRECT,[]GEOIP,CN
