--- a/subconvert.ini
+++ b/subconvert.ini
@@ -1,3 +1,4 @@
+ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=DIRECT,https://raw.githubusercontent.com/godlikeanyone/Rules/master/Direct.list
 ruleset=Proxies,https://raw.githubusercontent.com/godlikeanyone/Rules/master/HideIP.list
 ruleset=DIRECT,[]GEOIP,CN
