--- a/subconvert.ini
+++ b/subconvert.ini
@@ -5,4 +5,4 @@ ruleset=DIRECT,[]GEOIP,CN
 ruleset=🌎 Proxies,[]MATCH
 
 custom_proxy_group=🌎 Proxies`select`[]♻️ Auto Select`.*
-custom_proxy_group=♻️ Auto Select`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|台|新北|彰化|TW|Taiwan|港|HK|新加坡|SG)`https://cp.cloudflare.com/generate_204`500
+custom_proxy_group=♻️ Auto Select`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|台|新北|彰化|TW|Taiwan|港|HK|新加坡|SG)`https://www.google.com/generate_204`500
